Use StandardJS, cleanup tests.

--- a/test/index.html
+++ b/test/index.html
@@ -9,16 +9,15 @@
 </script>
 <script src="../index.js"></script>
 <script>
-  Base64 = module.exports;
-
-  mocha.setup({ignoreLeaks: true, ui: "bdd"});
-  expect = chai.expect;
+  Base64 = module.exports
+  mocha.setup({ignoreLeaks: true, ui: "bdd"})
+  expect = chai.expect
 </script>
 <script src="test.js"></script>
 
 <div id="mocha"></div>
 
 <script>
-  mocha.run();
+  mocha.run()
 </script>
 
