Update setup code

--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
 <script>
   Base64 = module.exports;
 
-  mocha.setup({ignoreLeaks: true, ui: "bdd"});
+  mocha.setup("bdd");
   expect = chai.expect;
 </script>
 <script src="native.js"></script>
